Fix scrollbar

--- a/src/ui/components/DialogGroupControl/DialogGroupControl.scss
+++ b/src/ui/components/DialogGroupControl/DialogGroupControl.scss
@@ -64,6 +64,7 @@
 
     &__selector-settings {
         overflow-y: auto;
+        overflow-x: hidden;
     }
 
     &__footer {
